src/go/types/testdata/fixedbugs/issue46453.src
package issuennnnn

type _ comparable // ERROR "undeclared name: comparable"
